--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@windmill/react-ui": "^0.6.0",
     "autoprefixer": "^10.4.8",
+    "firebase": "^9.9.4",
     "framer-motion": "^7.2.1",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
