--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "autoprefixer": "^10.4.8",
     "firebase": "^9.9.4",
     "framer-motion": "^7.2.1",
+    "imagekitio-react": "^1.1.1",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
