adding more dashboard components

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "@windmill/react-ui": "^0.6.0",
     "autoprefixer": "^10.4.8",
+    "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
+    "draft-js-import-html": "^1.4.1",
     "firebase": "^9.9.4",
     "framer-motion": "^7.2.1",
     "imagekitio-react": "^1.1.1",
