--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "imagekitio-react": "^1.1.1",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
